# tame-oidc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  release.toml
.github/: CODEOWNERS
.github/workflows/: rust-ci.yml
examples/: embark-basic.rs  embark-pkce.rs  embark.rs  oidc.rs
src/: auth_scheme.rs  deserialize_uri.rs  errors.rs  issuers.rs  lib.rs  oidc.rs  provider.rs  strict.rs
