[package]
name = "tame-oidc"
description = "A (very) thin layer of OIDC like functionality"
version = "0.0.1"
authors = ["Embark <opensource@embark-studios.com>", "Mathias Tervo <mathias.tervo@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/EmbarkStudios/tame-oidc"
repository = "https://github.com/EmbarkStudios/tame-oidc"
keywords = ["oauth", "oidc", "tame", "sans-io"]

[lib]
doctest = false
path = "src/lib.rs"

[[example]]
name = "embark"
path = "examples/embark.rs"

[dependencies]
tame-oauth = "0.4"
chrono = "0.4"
http = "0.2"
jsonwebtoken = "7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"

## dev dependencies below
[dev-dependencies.reqwest]
version = "0.11"
features = ["rustls-tls"]
default-features = false

[dev-dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
