[package]
name = "tame-oidc"
description = "A (very) thin layer of OIDC like functionality"
version = "0.5.0"
authors = ["Embark <opensource@embark-studios.com>", "Mathias Tervo <mathias.tervo@embark-studios.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/EmbarkStudios/tame-oidc"
categories = ["authentication"]
repository = "https://github.com/EmbarkStudios/tame-oidc"
keywords = ["oauth", "oidc", "tame", "sans-io"]

[lib]
doctest = false
path = "src/lib.rs"

[[example]]
name = "embark"
path = "examples/embark.rs"

[dependencies]
base64 = "0.13"
http = "0.2"
jsonwebtoken = "8.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.3"
thiserror = "1"

## dev dependencies below
[dev-dependencies]
bytes = "1.2"

[dev-dependencies.reqwest]
version = "0.11"
features = ["rustls-tls"]
default-features = false

[dev-dependencies.tokio]
version = "1.21"
features = ["macros", "rt-multi-thread"]
