[package]
name = "tame-oidc"
description = "A (very) thin layer of OIDC like functionality"
version = "0.7.0"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Mathias Tervo <mathias.tervo@embark-studios.com>",
]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/EmbarkStudios/tame-oidc"
categories = ["authentication"]
repository = "https://github.com/EmbarkStudios/tame-oidc"
keywords = ["oauth", "oidc", "tame", "sans-io"]

[lib]
doctest = false
path = "src/lib.rs"

[[example]]
name = "embark-pkce"
path = "examples/embark-pkce.rs"

[[example]]
name = "embark-basic"
path = "examples/embark-basic.rs"

[dependencies]
data-encoding = "2.4"
http = "1"
jsonwebtoken = "9.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.3"
thiserror = "1"

## dev dependencies below
[dev-dependencies]
bytes = "1.4"
rand = "0.8.5"
ring = "0.17.7"

[dev-dependencies.reqwest]
version = "0.12.1"
features = ["rustls-tls"]
default-features = false

[dev-dependencies.tokio]
version = "1.35.0"
features = ["macros", "rt-multi-thread"]
